--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,5 +10,6 @@
   The world is your oyster.
   <p>
     New feature added <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+    new releases
   </p>
 </ion-content>
